--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
+    "paths": {
+      "three/examples/jsm/libs/dat.gui.module": [
+          "./node_modules/@types/dat.gui"
+      ]
+  },
     "target": "es5",
     "lib": [
       "dom",
