--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,27 +5,9 @@
           "./node_modules/@types/dat.gui"
       ]
   },
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+      "moduleResolution": "node",
+      "strict": true,
+      "allowJs": true
   },
-  "include": [
-    "src"
-  ]
+  "include": ["**/*.ts"]
 }
