--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
+    "@types/react-bootstrap": "^0.32.28",
     "@types/react-dom": "^17.0.0",
     "@types/three": "^0.134.0",
     "@types/three-dat.gui": "^2.0.1",
+    "bootstrap": "^5.1.3",
     "dat.gui": "^0.7.7",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "three": "^0.134.0",
