--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
-    "three": "^0.134.0",
+    "styled-components": "^5.3.3",
+    "three": "^0.135.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
