--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@types/three-dat.gui": "^2.0.1",
     "bootstrap": "^5.1.3",
     "dat.gui": "^0.7.7",
+    "html2canvas": "^1.3.3",
+    "platform-detect": "^3.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-fade-in": "^2.0.1",
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
