--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "platform-detect": "^3.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-fade-in": "^2.0.1",
     "react-icons": "^4.3.1",
