--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-fade-in": "^2.0.1",
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
+    "react-svg": "^14.1.6",
     "styled-components": "^5.3.3",
     "three": "^0.135.0",
     "typescript": "^4.1.2",
